welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:1: error: ':' expected but ')' found.
def alarmClock (n:Int,vacation)  
                              ^alarmClock:2: error: identifier expected but '}' found.
 }
 ^