welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock (n:Int,vacation) 